--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
         </div>
         <br>
         <h2>Main conclusion</h2>
-        <span id="main_conclusion">Wolfram is a better image detection model than mobilenet as it detected 2 out of 3 images corrects where as mobilenet could detect only 1 out of 3 correct and also the 1 time Wolfram did get inccorrect it was still close</span>
+        <span id="main_conclusion">I have tested 3 images
+            Mobilenet has detected 1 of them correctly 
+            Wolfram has detect 2 of them correctly
+            So according to my casestudy Wolfram is better
+        </span>
 </center>
 </body>
 </html>
